# course_work

./: README.md  env.example  pyproject.toml
report_spending/: report_spending_by_category_20250829_160437.json  report_spending_by_category_20250829_163146.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
