[project]
name = "course-work"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Kazantsev"}
]
license = {text = "MIT RF"}
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 119
exclude = '''
(
/(
\.eggs
# Исключить несколько общих каталогов
| \.git
# в корне проекта
| \.mypy_cache
| \.venv
)/
| foo.py
# Также отдельно исключить файл с именем foo.py
# в корне проекта
)
'''

[tool.isort]
line_length = 119
